# Ray

./: .qmlls.ini  CMakeLists.txt  QML.qrc  main_bk.cpp
qml/: main.qml
src/: chartdatamodel.cpp  chartdatamodel.h  chartrenderer.cpp  chartrenderer.h  main.cpp
